--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,23 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "experimentalDecorators": true,
-    "noImplicitAny": true,
     "target": "ES2022",
-    "module": "ESNext",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "lib": ["es2022"],
     "declaration": true,
-    "declarationMap": true,
-    "outDir": "lib",
-    "removeComments": false,
     "strict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": false,
     "inlineSourceMap": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "pretty": true,
-    "baseUrl": "src/",
-    "rootDirs": [ "src/" ],
-    "esModuleInterop": true
+    "inlineSources": true,
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": false
   },
-  "include": [ "src/**/*", "tests/**/*" ],
-  "exclude": [ "./node_modules"],
-  "watchOptions": {
-    "watchFile": "useFsEvents",
-    "watchDirectory": "useFsEvents",
-    "fallbackPolling": "dynamicPriority"
-  },
-  "lib": [ "ES2023" ],
-  "types": [
-    "node"
-  ]
+  "exclude": ["node_modules", "cdk.out"]
 }
