--- a/biome.json
+++ b/biome.json
@@ -1,22 +1,30 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.3/schema.json",
-  "files": {
-    "ignore": ["cdk.out/*", "node_modules/*"]
-  },
-  "organizeImports": {
-    "enabled": true
-  },
+  "$schema": "node_modules/@biomejs/biome/configuration_schema.json",
+  "assist": { "actions": { "source": { "organizeImports": "on" } } },
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true
+      "recommended": true,
+      "style": {
+        "noParameterAssign": "error",
+        "useAsConstAssertion": "error",
+        "useDefaultParameterLast": "error",
+        "useEnumInitializers": "error",
+        "useSelfClosingElements": "error",
+        "useSingleVarDeclarator": "error",
+        "noUnusedTemplateLiteral": "error",
+        "useNumberNamespace": "error",
+        "noInferrableTypes": "error",
+        "noUselessElse": "error"
+      }
     }
   },
   "formatter": {
     "enabled": true,
     "indentStyle": "space",
     "indentWidth": 2,
-    "lineEnding": "lf"
+    "lineEnding": "lf",
+    "lineWidth": 80
   },
   "javascript": {
     "formatter": {
@@ -25,5 +33,17 @@
       "quoteStyle": "single",
       "trailingCommas": "es5"
     }
+  },
+  "files": {
+    "includes": [
+      "**",
+      "!**/node_modules",
+      "!**/coverage",
+      "!**/lib",
+      "!**/cdk.out",
+      "!**/site",
+      "!**/.aws-sam",
+      "!**/dist"
+    ]
   }
 }
