--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch": "tsc -w",
     "test": "vitest",
     "cdk": "cdk",
-    "format": "biome check --write",
+    "lint:fix": "biome check --write",
     "lint": "biome lint"
   },
   "type": "module",
@@ -23,28 +23,28 @@
     "*.{ts,js}": "biome check --write"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.3",
-    "@types/aws-lambda": "^8.10.145",
-    "@types/node": "22.7.5",
-    "@vitest/coverage-v8": "^2.1.2",
-    "aws-cdk": "2.161.1",
-    "aws-sdk-client-mock": "^4.0.2",
-    "aws-sdk-client-mock-vitest": "^4.0.0",
-    "esbuild": "^0.24.0",
-    "tsx": "^4.19.1",
-    "typescript": "~5.6.3",
-    "vitest": "^2.1.2"
+    "@biomejs/biome": "^2.3.10",
+    "@types/aws-lambda": "^8.10.159",
+    "@types/node": "25.0.3",
+    "@vitest/coverage-v8": "^4.0.16",
+    "aws-cdk": "2.1100.1",
+    "aws-sdk-client-mock": "^4.1.0",
+    "aws-sdk-client-mock-vitest": "^7.0.1",
+    "esbuild": "^0.27.2",
+    "tsx": "^4.21.0",
+    "typescript": "~5.9.3",
+    "vitest": "^4.0.16"
   },
   "dependencies": {
-    "@aws-lambda-powertools/logger": "^2.9.0",
-    "@aws-lambda-powertools/metrics": "^2.9.0",
-    "@aws-lambda-powertools/parser": "^2.9.0",
-    "@aws-sdk/client-cloudwatch-logs": "^3.668.0",
-    "@aws-sdk/client-scheduler": "^3.668.0",
-    "aws-cdk-lib": "2.161.1",
-    "constructs": "^10.0.0",
+    "@aws-lambda-powertools/logger": "^2.30.0",
+    "@aws-lambda-powertools/metrics": "^2.30.0",
+    "@aws-lambda-powertools/parser": "^2.30.0",
+    "@aws-sdk/client-cloudwatch-logs": "^3.958.0",
+    "@aws-sdk/client-scheduler": "^3.958.0",
+    "aws-cdk-lib": "2.233.0",
+    "constructs": "^10.4.4",
     "source-map-support": "^0.5.21",
-    "temporal-polyfill": "^0.2.5",
-    "zod": "^3.23.8"
+    "temporal-polyfill": "^0.3.0",
+    "zod": "^4.2.1"
   }
 }
