--- a/package.json
+++ b/package.json
@@ -1,51 +1,50 @@
 {
-    "name": "ts-project-starter-template",
-    "version": "0.0.1",
-    "description": "An opinionated TypeScript project starter template",
-    "scripts": {
-        "init-environment": "husky install",
-        "build": "tsup",
-        "lint": "eslint --ext .ts,.cjs --no-error-on-unmatched-pattern .",
-        "lint-fix": "eslint --fix --ext .ts,.cjs --no-error-on-unmatched-pattern .",
-        "test": "vitest --run --coverage"
-    },
-    "type": "module",
-    "keywords": [
-        "github",
-        "ts",
-        "typescript",
-        "pr",
-        "template"
-    ],
-    "author": {
-        "name": "Andrea Amorosi",
-        "email": "dreamorosi@gmail.com"
-    },
-    "license": "MIT-0",
-    "engines": {
-        "node": ">=18"
-    },
-    "lint-staged": {
-        "*.ts": "npm run lint-fix",
-        "*.cjs": "npm run lint-fix"
-    },
-    "devDependencies": {
-        "@types/node": "^18.15.11",
-        "@typescript-eslint/eslint-plugin": "^5.57.1",
-        "@typescript-eslint/parser": "^5.57.1",
-        "@vitest/coverage-c8": "^0.30.1",
-        "esbuild": "^0.17.16",
-        "eslint": "^8.38.0",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-import-resolver-node": "^0.3.7",
-        "eslint-import-resolver-typescript": "^3.5.5",
-        "eslint-plugin-import": "^2.27.5",
-        "eslint-plugin-prettier": "^4.2.1",
-        "husky": "^8.0.3",
-        "lint-staged": "^13.1.2",
-        "prettier": "^2.8.7",
-        "tsup": "^6.7.0",
-        "typescript": "^5.0.4",
-        "vitest": "^0.31.0"
-    }
+  "name": "cloudwatch-logs-garbage-goober",
+  "version": "0.0.1",
+  "description": "Automated cleanup of CloudWatch Log Groups created by AWS Lambda Powertools e2e tests",
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc -w",
+    "test": "vitest",
+    "cdk": "cdk",
+    "lint:fix": "biome check --write",
+    "lint": "biome lint"
+  },
+  "type": "module",
+  "author": {
+    "name": "Andrea Amorosi",
+    "email": "dreamorosi@gmail.com"
+  },
+  "license": "MIT-0",
+  "engines": {
+    "node": ">=20"
+  },
+  "lint-staged": {
+    "*.{ts,js}": "biome check --write"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^2.3.10",
+    "@types/aws-lambda": "^8.10.159",
+    "@types/node": "25.0.3",
+    "@vitest/coverage-v8": "^4.0.16",
+    "aws-cdk": "2.1100.1",
+    "aws-sdk-client-mock": "^4.1.0",
+    "aws-sdk-client-mock-vitest": "^7.0.1",
+    "esbuild": "^0.27.2",
+    "typescript": "~5.9.3",
+    "vitest": "^4.0.16"
+  },
+  "dependencies": {
+    "@aws-lambda-powertools/batch": "^2.30.0",
+    "@aws-lambda-powertools/logger": "^2.30.0",
+    "@aws-lambda-powertools/metrics": "^2.30.0",
+    "@aws-lambda-powertools/parser": "^2.30.0",
+    "@aws-sdk/client-cloudwatch-logs": "^3.958.0",
+    "@aws-sdk/client-scheduler": "^3.958.0",
+    "aws-cdk-lib": "2.233.0",
+    "constructs": "^10.4.4",
+    "source-map-support": "^0.5.21",
+    "temporal-polyfill": "^0.3.0",
+    "zod": "^4.2.1"
+  }
 }
