--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.10",
+    "@mrgrain/cdk-esbuild": "^5.7.6",
     "@types/aws-lambda": "^8.10.159",
     "@types/node": "25.0.3",
     "@vitest/coverage-v8": "^4.0.16",
     "aws-cdk": "2.1100.1",
     "aws-sdk-client-mock": "^4.1.0",
     "aws-sdk-client-mock-vitest": "^7.0.1",
+    "cdk-nag": "^2.37.55",
     "esbuild": "^0.27.2",
     "typescript": "~5.9.3",
     "vitest": "^4.0.16"
