--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "@aws-lambda-powertools/batch": "^2.30.0",
     "@aws-lambda-powertools/logger": "^2.30.0",
     "@aws-lambda-powertools/metrics": "^2.30.0",
+    "@aws-lambda-powertools/parameters": "^2.30.0",
     "@aws-lambda-powertools/parser": "^2.30.0",
     "@aws-sdk/client-cloudwatch-logs": "^3.958.0",
     "@aws-sdk/client-scheduler": "^3.958.0",
+    "@aws-sdk/client-ssm": "^3.958.0",
     "aws-cdk-lib": "2.233.0",
     "constructs": "^10.4.4",
     "source-map-support": "^0.5.21",
