chore: remove migration plan and update config template
- Remove MIGRATION_PLAN.md as it's no longer needed
- Update config.json.template to use slackWebhookParameter instead of alertsEmailParameter

--- a/config.json.template
+++ b/config.json.template
@@ -14,5 +14,5 @@
     "Service": "Powertools-for-AWS-e2e-tests"
   },
   "deletionDelayDays": 1,
-  "alertsEmailParameter": "/alerts-email"
+  "slackWebhookParameter": "/slack-cloudwatch-alerts-webhook-url"
 }
